crates/solidity/testing/snapshots/bindings_output/contracts/storage_layout_constant_number/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected IsKeyword or OpenBrace.
   ╭─[input.sol:1:11]
   │
 1 │ ╭─▶ contract C layout at 0xAAAA {
 2 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (0):

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["C" @ input.sol:1:10]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract C layout at 0xAAAA {
   │          ┬  
   │          ╰── ???
───╯
